# ndsh

./: .gitignore  main.py  pyproject.toml
examples/: poc_client.py  poc_server.py  poc_web_client.py
ndsh/: config.py  ecies.py  executor.py  process.bak2.py  process.py
static/css/: xterm.min.css
static/js/: fullscreen.min.js  xterm.min.js
