[tool.poetry]
name = "ndsh"
version = "0.1.0"
description = "Remote shell over NDN"
authors = ["Xinyu Ma <ma.xinyu.26a@kyoto-u.jp>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-ndn = "^0.4.2"
# python-ndn = {path="../python-ndn/", develop = true}
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
